# dev-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
config/: .gitconfig
config/claude/skills/forge/: SKILL.md
setup/: bootstrap-remote.ps1  bootstrap-remote.sh  bootstrap.ps1  bootstrap.sh  install.py
tools/devsesh/: README.md  pyproject.toml
tools/devsesh/src/devsesh/: __init__.py  cleanup.py  cli.py  client.py  config.py  repos.py  service.py  session.py  worktree.py
tools/forge/: README.md  pyproject.toml
tools/forge/src/forge/: __init__.py  backends.py  build.py  cli.py  config.py  gates.py  pipeline.py  pr.py  review.py  router.py  task.py
tools/forge/tests/: test_build.py  test_config.py  test_gates.py  test_pipeline.py  test_pr.py  test_review.py  test_router.py
