[project]
name = "forge"
version = "0.1.0"
description = "Adaptive software-production pipeline: routes build work across local and subscription models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "devsesh",
]

[project.scripts]
forge = "forge.cli:app"

[tool.uv.sources]
devsesh = { path = "../devsesh", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]
